@@ -62,11 +62,6 @@ Version 0.8.0 - "Make it nice for developers": code clean-up, qa and documentati
 - investigate whether we should use t3lib_flexformtools
 - add "@author" / "@package TYPO3" and "@subpackage tx_seminars" to all PHP classes (this is required by the TYPO3 coding guidelines)
 - check that all occurances of TYPO3 in comments and strings use the correct case "TYPO3"
-- investigate whether we actually need both of the following:
-  - in ext_localconf.php:
-      t3lib_extMgm::addStaticFile($_EXTKEY,'static/','Seminar Manager Setup');
-  - in ext_tables.php:
-      t3lib_extMgm::addStaticFile($_EXTKEY,'static/','Seminars');
 - make sure each file has a linefeed as last character (except for the XML files)
 - use mmQuery where possible (eg. in seminar->getSpeakersShort)
 - in seminar->createListRow(), factor out the creation of the CSS class
